2006-05-30  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Sprite.cs (PaintSprite): the logic for the
	clipping test wasn't taking into account the fact that the x,y of
	a unit changed from top-left to center.  this fixes ticket #3.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/TitleScreen.cs (LoadingFlasher): flash the
	"Loading" text on the screen as we load things.  The managed
	stormlib does take a little longer to load things, which is a
	bonus - the title screen actually stays up long enough for this
	string to be shown :)

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* Makefile.am (release): make it a zip file instead of a tar.bz2.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* Makefile.am (release): fix this target so that it works again.

	* NEWS: include news for the first time.

	* configure.ac: bump to 0.0000008.

	* HACKING: fix up the .smk entry, with various options for
	projects, and remove the managed stormlib project since Foole's is
	working.

	* RELEASE_README: s/starcraft/scsharp

	* src/scsharp.exe.config-example: add the new options.

	* src/scsharp.exe.config: can't put -- in the middle of comments.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/Makefile.am (MCSFLAGS): define USE_STORM_DLL if
	ENABLE_STORMLIB == true.

	* src/scsharp.exe.config: add some comments about the debugging
	options, and add a new one to enable the unmanaged mpq library.

	* Tests/dump-iscript.cs (DumpIScript.ctor): we assume the mpq
	passed in is the stardat.mpq.

	* SCSharp/SCSharp.UI/Painter.cs (.ctor): add back in a constructor
	taking a Surface so the font-foo test continues to work.

	* SCSharp/SCSharp.Mpq/Mpq.cs: USE_STORM_DLL no longer switches
	between managed/unmanaged implementations, but compiles in the
	optional unmanaged version as well.

	* Makefile.am (SUBDIRS): only build in StormLib if ENABLE_STORMLIB
	== true.

	* configure.ac: add AC_ARG_ENABLE for --enable-stormlib.  If it's